--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>This is my 1st Headline</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore exercitationem, error suscipit esse expedita perspiciatis minus aperiam facere nulla nemo pariatur consectetur, harum et ullam nisi, tenetur tempora vel voluptatibus! Accusantium et impedit numquam necessitatibus suscipit magni, tempora molestias odio nihil vel assumenda! Enim impedit non officia sit cumque ad.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore exercitationem, error suscipit esse expedita perspiciatis minus aperiam facere nulla nemo pariatur consectetur, harum et ullam nisi, tenetur tempora vel voluptatibus! Accusantium et impedit numquam necessitatibus suscipit magni, tempora molestias odio nihil vel assumenda! Enim impedit non officia sit cumque.</p>
 </body>
 </html>
